--- a/views/memberRegistration/login.jade
+++ b/views/memberRegistration/login.jade
@@ -1,26 +1,41 @@
-extends header
-
-block content
-    title Search N Talk - Expert Registration - Login
-    include ../errorMessage
-    .row-fluid
-        p.h4
-            | Welcome to expert network of&nbsp;
-            strong #{integration.title}
-        em.small Note: We've pre-filled some of the fields based on the invitation for your convenience
-    .row-fluid
-        div
-            form#login-form(role='form', method='POST')
-                .form-group
-                    label(for='username') Email
-                    input.form-control#username(name='username', type='email', data-toggle="tooltip", data-placement="bottom", value=member.user.email)
-                .form-group
-                    label(for='login_password') Password
-                    input.form-control#login_password(name='password', type='password', data-toggle="tooltip", data-placement="bottom")
-                .form-group
-                    .controls
-                        input.btn-primary.btn(value='Login', type='submit')
-                        a.btn.btn-link(href=DashboardUrls.forgotPassword()) Forgot password?
-                        a.btn.btn-link(href=MemberRegistrationUrls.register()) Create an account
-            a.btn-primary.btn(href=MemberRegistrationUrls.linkedInLogin()) Login with LinkedIn
-    script(src='/js/app/expertRegistration/authenticate.js')
+title SearchNTalk | Member Registration | Create Account
+include ../header
+.matter
+    .container
+        .row
+            .content.col-xs-9.col-sm-9.col-md-12.col-lg-12
+                .row
+                    .col-md-6
+                        .user-profile
+                            .info
+                                .user-displayname You've been invited to the expert panel of #{integration.title}
+                            .hidden-xs.profile
+                                p Please begin by creating an account on searchntalk.com
+                            .clearer
+                            .hidden-xs.meta.meta-keywords
+                                h5 How it works
+                                dl
+                                    dt Share your expertise
+                                    dd You can charge for your advice or offer it for free
+                                    dt After your approval
+                                    dd Callers will book an appointment and share agenda before the call
+                                    dt Your number stays private
+                                    dd We connect the calls without disclosing your number
+                    .col-md-6
+                        .call-card
+                            form#login-form(role='form', method='POST')
+                                .form-group
+                                    label(for='username') Email
+                                    input.form-control#username(name='username', type='email', data-toggle="tooltip", data-placement="bottom", value=member.user.email)
+                                .form-group
+                                    label(for='login_password') Password
+                                    input.form-control#login_password(name='password', type='password', data-toggle="tooltip", data-placement="bottom")
+                                .form-group
+                                    .controls
+                                        input.btn-primary.btn.btn-block(value='Login', type='submit')
+                                a.btn-linkedin.btn(href=MemberRegistrationUrls.linkedInLogin()) Login with LinkedIn
+                                a.btn.btn-link(href=DashboardUrls.forgotPassword()) Forgot password?
+                                a.btn.btn-link(href=MemberRegistrationUrls.register()) Create an account
+                                // /.content
+include ../footer
+script(src='/js/app/expertRegistration/authenticate.js')
