Fix in Call Flow -  Show phone number on return from payment gateway  Schedule now shown only for time > currentTime  Remove Coupon Button

--- a/views/dashboard/paymentComplete.jade
+++ b/views/dashboard/paymentComplete.jade
@@ -53,7 +53,7 @@ include ../callFlow/header
                                     li.schedule-c= formatDate(appointments[2], 'ddd DD MMM YYYY, hh:mm a')
                             .meta
                                 h5 Call Recepient
-                                p +91-#{caller-phone}
+                                p +91-#{caller_phone}
                             .meta
                                 h5 Call Agenda
                                 p #{phoneCall.agenda}
