--- a/views/callFlow/payment.jade
+++ b/views/callFlow/payment.jade
@@ -90,7 +90,7 @@ title ST-#{formatName(expert.user[0].first_name, expert.user[0].last_name, exper
                                                         .table-cell.title Tax @#{Config.get(Config.CALL_TAX_PERCENT)}%
                                                     when 4
                                                         .table-cell.title Discount
-                                                            a.fa.fa-times-circle.removeCoupon#removeCoupon(href=CallFlowUrls.removeCoupon()) aa
+                                                            a.glyphicon.glyphicon-remove#removeCoupon(href=CallFlowUrls.removeCoupon())
                                                 .table-cell.amount= formatMoney(line.amount, line.amount_unit)
                                     form.table-row#couponForm(action='/expert/call/payment/coupon', method='post')
                                         .table-cell.title
