--- a/views/callFlow/payment.jade
+++ b/views/callFlow/payment.jade
@@ -137,6 +137,7 @@ title ST-#{formatName(expert.user[0].first_name, expert.user[0].last_name, exper
                     .form-group
                         .row
                             a.btn.btn-primary.btn-block#login-button.login Login
+                        .row
                             a.btn.btn-primary.btn-block#register-button.register Register
                         .row
                             a.btn.btn-linkedin Login using LinkedIn
