--- a/views/callFlow/payment.jade
+++ b/views/callFlow/payment.jade
@@ -141,7 +141,7 @@ title ST-#{formatName(expert.user[0].first_name, expert.user[0].last_name, exper
                         .row
                             a.btn.btn-primary.btn-block#register-button.register Register
                         .row
-                            a.btn.btn-linkedin(href=CallFlowUrls.linkedInLogin()) Login using LinkedIn
+                            a.btn.btn-linkedin Login using LinkedIn
                             a.btn.btn-facebook Login using Facebook
                     .form-group
                         .controls
