Updated login popup on call payment

--- a/public/css/icons.less
+++ b/public/css/icons.less
@@ -120,6 +120,7 @@
 }
 
 .icon-searchntalk:before { content: '\2001'}
+.icon-searchntalk-empty:before { content: '\200A'}
 .icon-searchntalk-logo:before { content: '\2009'}
 .icon-search:before { content: '\2002'; }
 .icon-schedule:before { content: '\2003'; }
