--- a/public/css/main.css
+++ b/public/css/main.css
@@ -246,6 +246,9 @@ h1 {
 .icon-searchntalk:before {
   content: '\2001';
 }
+.icon-searchntalk-empty:before {
+  content: '\200A';
+}
 .icon-searchntalk-logo:before {
   content: '\2009';
 }
@@ -1112,10 +1115,10 @@ ul.tagit li.tagit-choice {
   background: none;
   background-color: #DDDDDD;
   font-weight: normal;
+  padding: 0px 3px;
 }
 ul.tagit li.tagit-choice .tagit-label:not(a) {
   color: #555;
-  padding: 0px 3px;
 }
 ul.tagit li.tagit-choice a.tagit-close {
   text-decoration: none;
@@ -1924,7 +1927,7 @@ a:hover {
 .call-profile .meta.meta-schedule ul li {
   display: inline-block;
   padding: 0px 5px;
-  margin: 2px 2px 0px 0px;
+  margin: 0px 1px 0px 0px;
   line-height: 20px;
   background: rgba(75, 93, 94, 0.6);
   color: #ffffff;
@@ -1987,7 +1990,8 @@ a:hover {
   padding: 0px 0px 10px 0px;
   border-bottom: 1px solid #cfd8d9;
 }
-.call-card {
+.call-card,
+.error-card {
   background: #ffffff;
   margin: 10px;
   padding: 10px;
@@ -1998,11 +2002,13 @@ a:hover {
   -moz-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
-.call-card .row {
+.call-card .row,
+.error-card .row {
   background: #ffffff;
 }
 @media (max-width: 991px) {
-  .call-card {
+  .call-card,
+  .error-card {
     margin: 0px -15px;
     padding: 0px;
     -webkit-border-radius: 0px;
@@ -2012,6 +2018,59 @@ a:hover {
     -moz-box-shadow: 0px 0px 0px rgba(0, 0, 0, 0);
     box-shadow: 0px 0px 0px rgba(0, 0, 0, 0);
   }
+}
+.error-card {
+  text-align: center;
+  padding: 15px;
+}
+@media (max-width: 991px) {
+  .error-card {
+    margin: 15px;
+  }
+}
+.error-box {
+  padding: 215px 15px 15px 15px;
+  position: relative;
+}
+.error-box::before {
+  position: absolute;
+  text-align: center;
+  font-family: 'snticons';
+  font-size: 200px;
+  line-height: 200px;
+  margin-left: -100px;
+  top: 15px;
+  color: #f9eed5;
+  text-shadow: 0px -1px 0px rgba(249, 175, 24, 0.3);
+  content: '\200A';
+}
+.error-box::after {
+  position: absolute;
+  text-align: center;
+  font-family: 'snticons';
+  font-size: 50px;
+  line-height: 200px;
+  margin-left: -23px;
+  top: 20px;
+  color: #ecefef;
+  text-shadow: 0px -1px 0px rgba(75, 93, 94, 0.2);
+  content: '\e014';
+}
+.error-box h1,
+.error-box p {
+  margin: 20px;
+}
+.error-box h1 {
+  font-size: 40px;
+  font-weight: 100;
+  color: #eeeeee;
+  text-shadow: 0px -1px 0px #dddddd;
+}
+.error-box p {
+  font-size: 16px;
+}
+.error-box a {
+  color: #f9af18;
 }
 .call-options {
   padding: 0px 15px;
