--- a/public/css/widget.css
+++ b/public/css/widget.css
@@ -246,6 +246,9 @@ h1 {
 .icon-searchntalk:before {
   content: '\2001';
 }
+.icon-searchntalk-empty:before {
+  content: '\200A';
+}
 .icon-searchntalk-logo:before {
   content: '\2009';
 }
@@ -407,6 +410,7 @@ body {
   font-size: 150px;
   line-height: 150px;
   font-family: 'snticons';
+  content: '\e008';
 }
 .widget .avatar .status {
   position: absolute;
