Bypass payment gateway in case of net payable amount being 0

--- a/views/dashboard/paymentComplete.jade
+++ b/views/dashboard/paymentComplete.jade
@@ -1,6 +1,6 @@
 - var user = expert.user[0];
 
-include ../callFlow/header
+include ../header
 // /.masthead
 .matter
     .container
@@ -109,4 +109,4 @@ include ../callFlow/header
                                         | Cancel Call
                                         i.icon-cancel
             // /.content
-include ../callFlow/footer
+include ../footer
