--- a/views/callFlow/index.jade
+++ b/views/callFlow/index.jade
@@ -27,8 +27,11 @@ include ../header
                                 li
                                     a.well 60
                             p.floatright
-                                strong $1.00
-                                | /min
+                                if expert.schedule[0].price_per_min
+                                    strong= formatMoney(expert.schedule[0].price_per_min, expert.schedule[0].price_unit)
+                                    | /min.
+                                else
+                                    strong Free
                 .schedule-options
                     .row.scheduler-header
                         .col-xs-8
@@ -76,7 +79,10 @@ include ../header
                                     a.remove-timeslot Remove
             .modal-footer
                 .alert.alert-warning
-                    strong You have selected 1 time slot so far.
+                    strong
+                        | You have selected &nbsp;
+                        span.num-slots
+                        | &nbsp;time slot so far.&nbsp;
                     | Please select 3 time slots in order to schedule a call.
                 .pull-right
                     a.btn.btn-primary#schedule-done Done
