Show version on page footer

--- a/views/footer.jade
+++ b/views/footer.jade
@@ -12,4 +12,7 @@
         .row.copyright
             .hidden-xs.col-sm-9
             .col-sm-3
-                span.text-muted © 2014 searchntalk.com
+                span.text-muted
+                    | © 2014 searchntalk.com (version:&nbsp;
+                    span= Config.get(Config.VERSION)
+                    | )
