--- a/views/callFlow/index.jade
+++ b/views/callFlow/index.jade
@@ -1,4 +1,4 @@
-- var user = expert.user[0];
+- var user = expert.user;
 title ST-#{formatName(user.first_name, user.last_name, user.title)}
 include ../header
 .modal.fade#scheduler
