--- a/views/callScheduling/schedulingPageForExpert.jade
+++ b/views/callScheduling/schedulingPageForExpert.jade
@@ -8,8 +8,12 @@ include ../header
                 .row
                     .col-md-6
                         .call-profile
-                            h1= formatName(call.user.first_name, call.user.last_name, call.user.title)
-                                | &nbsp; has requested to speak to you
+                            h1
+                                | Call request from&nbsp;
+                                span= formatName(call.user.first_name, call.user.last_name, call.user.title)
+                            .meta
+                                h5 Call Id
+                                p= call.id
                             .meta
                                 h5 Call Agenda
                                 p= call.agenda
@@ -22,7 +26,7 @@ include ../header
                             form#scheduling(action=ApiUrlDelegate.phoneCallScheduling(call.id))
                                 .payment-summary.call-inputs
                                     h1
-                                        i.icon-bill
+                                        i.icon-scheduler
                                         | Suggested Time
                                     h3 Pick one of the suggested slots
                                     for slot in startTimes
@@ -30,25 +34,34 @@ include ../header
                                             input(type='radio', name='startTime', value=slot, checked=selectedStartTime == slot)
                                             label= formatDate(slot)
                                     h3 Or Suggest another time convenient to you
-                                    input#startTime(type='text', name='startTimeInput')
+                                    input#startTime.datepicker(type='text', name='startTimeInput')
                                 .payment-summary.call-inputs
                                     h1
                                         i.icon-phone
                                         | Your phone number
                                         .row
-                                            if !phones
+                                            if !phone
                                                 .input-group
                                                     .input-group-btn
                                                         select.form-control#country-code
                                                             for code,country in CountryCode
-                                                                option(value=country, selected=country == phones[0].country_code)= CountryName[code.toUpperCase()] + ' (+' + country + ')'
-                                                    input.form-control#phone(type='text', value=phones ? phones[0].phone : null)
+                                                                option(value=country, selected=country == phone.country_code)= CountryName[code.toUpperCase()] + ' (+' + country + ')'
+                                                    input.form-control#phone(type='text', value=phone ? phone.phone : null)
                                                     .input-group-btn
                                                         a.btn.btn-success#verify-btn Verify
                                             else
-                                                p= '+' + phones[0].country_code + '-' + phones[0].phone
+                                                p= '+' + phone.country_code + '-' + phone.phone
 
-                                input(type='hidden', name='phoneId', value=phones ? phones[0].id : null)
+                                if earning > 0
+                                    .payment-summary.call-inputs
+                                        h1
+                                            i.icon-bill
+                                            | Your earnings
+                                            .row
+                                                p= formatMoney(earning, earningUnit)
+
+
+                                input(type='hidden', name='phoneId', value=phone ? phone.id : null)
                                 input(type='hidden', name='code', value=code)
                                 input.btn.btn-primary.btn-block(type='submit', value='Confirm')
                                 .call-reversal
