--- a/views/header.jade
+++ b/views/header.jade
@@ -3,11 +3,22 @@ head
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1, user-scalable=false')
+
     link(href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic', rel='stylesheet', type='text/css')
+    link(href='/bower_dependencies/bootstrap/dist/css/bootstrap.min.css')
     link(href='/css/bootstrap.min.css', rel='stylesheet')
     link(href='/css/main.css', rel='stylesheet')
+    link(href='/bower_dependencies/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css', rel='stylesheet')
     //link(href='/css/style.css', rel='stylesheet')
-    script(src='/js/lib/combined.js')
+
+    script(src='/bower_dependencies/jquery/jquery.js')
+    script(src='/bower_dependencies/bootstrap/dist/js/bootstrap.min.js')
+    script(src='/bower_dependencies/moment/moment.js')
+    script(src='/bower_dependencies/moment/moment.js')
+    script(src='/bower_dependencies/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js')
+    script(src='/bower_dependencies/bootbox/bootbox.js')
+    script(src='/js/lib/jquery.validate.js')
+
 .masthead(role='banner')
     .container
         .masthead-brand
