Call cancellation message

--- a/views/callScheduling/schedulingPageForExpert.jade
+++ b/views/callScheduling/schedulingPageForExpert.jade
@@ -109,4 +109,5 @@ head
 include ../footer
 script.
     var callId = '!{call.id}';
+    var code = '!{code}';
 script(src='/js/app/callScheduling/scheduling.js')
