--- a/views/callFlow/payment.jade
+++ b/views/callFlow/payment.jade
@@ -133,3 +133,10 @@ title ST-#{formatName(user.first_name, user.last_name, user.title)} | Payment fo
         // /.modal-content
 script(src='/js/app/callFlow/payment.js')
 include ../footer
+script.
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      ga('create', '!{googleAnalyticsTrackingId}', 'searchntalk.com');
+    ga('send', 'pageview');
